# SpringMapConvNG

./: .gitignore  CMakeLists.txt
src/: mapcompile.cpp  mapdecompile.cpp
